--- a/src/components/specialty/specialtyPage.scss
+++ b/src/components/specialty/specialtyPage.scss
@@ -1,9 +1,12 @@
 @import "../../global.scss";
 
 .specialty-page {
+  overflow-x: hidden;
+  word-break: break-word;
+
   @include mobile {
     padding-top: 72px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
   }
 }
